--- a/diapos/RadiacionSolar.tex
+++ b/diapos/RadiacionSolar.tex
@@ -1,4 +1,4 @@
-% Created 2020-01-13 lun 13:33
+% Created 2020-01-15 mié 15:52
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -64,9 +64,9 @@
 \maketitle
 
 \section{Introducción}
-\label{sec:org2eaca1a}
+\label{sec:org3a005e4}
 
-\begin{frame}[label={sec:org79c912c}]{Radiación Solar y Sistemas Fotovoltaicos}
+\begin{frame}[label={sec:orgd55c291}]{Radiación Solar y Sistemas Fotovoltaicos}
 \begin{itemize}
 \item La \alert{energía producida} por un sistema fotovoltaico depende principalmente de la \alert{radiación incidente} en el generador.
 
@@ -78,7 +78,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org8e6f0c0}]{La radiación solar no se puede calcular analíticamente}
+\begin{frame}[label={sec:org01c650f}]{La radiación solar no se puede calcular analíticamente}
 \begin{itemize}
 \item La radiación solar que alcanza la superficie terrestre es el resultado de complejas interacciones en la atmósfera.
 \item Para estimar la radiación se requiere medidas terrestres o imágenes de satélite.
@@ -88,7 +88,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orge1d83b9}]{Ángulo de Inclinación}
+\begin{frame}[label={sec:org4d8b2a1}]{Ángulo de Inclinación}
 \begin{itemize}
 \item Los generadores FV tienen un \alert{ángulo de inclinación positivo} para maximizar el rendimiento.
 \item Este ángulo depende de la \alert{latitud} del lugar y de la \alert{aplicación del sistema}.
@@ -99,7 +99,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orge0a6966}]{Bases de Datos de Radiación Solar}
+\begin{frame}[label={sec:org57a578f}]{Bases de Datos de Radiación Solar}
 \begin{itemize}
 \item Por tanto, es inviable mantener una base de datos de radiación solar \alert{incidente}.
 \item Las \alert{bases de datos} registran radiación en el \alert{plano horizontal}.
@@ -108,18 +108,18 @@
 \end{frame}
 
 
-\begin{frame}[label={sec:orgb9575d8}]{Del plano horizontal al plano inclinado}
+\begin{frame}[label={sec:org1856a0f}]{Del plano horizontal al plano inclinado}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada.pdf}
 \end{center}
 \end{frame}
 
 \section{Geometría Sol y Tierra}
-\label{sec:org19a53e2}
+\label{sec:orgf18a2df}
 \subsection{Movimiento Sol-Tierra}
-\label{sec:org8757b15}
+\label{sec:orgd744158}
 
-\begin{frame}[label={sec:org1204919}]{Movimiento terrestre}
+\begin{frame}[label={sec:org93c57fa}]{Movimiento terrestre}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/PlanoEcliptica.pdf}
 \end{center}
@@ -141,7 +141,7 @@ eclíptica}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org47e952a}]{Movimiento terrestre}
+\begin{frame}[label={sec:orgde37402}]{Movimiento terrestre}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/PlanoEcliptica.pdf}
 \end{center}
@@ -156,9 +156,9 @@ eclíptica}
 
 
 \subsection{Ángulos Solares}
-\label{sec:org53ffc04}
+\label{sec:org3271817}
 
-\begin{frame}[label={sec:org67dfeab},plain]{Ejes terrestres}
+\begin{frame}[label={sec:org43cc5c1},plain]{Ejes terrestres}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -179,7 +179,7 @@ eclíptica}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orga5fb175}]{Declinación}
+\begin{frame}[label={sec:org0ae2c7b}]{Declinación}
 \begin{center}
 \includegraphics[height=0.6\textheight]{../figs/Declinacion.pdf}
 \end{center}
@@ -190,7 +190,7 @@ eclíptica}
 \end{frame}
 
 
-\begin{frame}[label={sec:org696f71e}]{Estaciones}
+\begin{frame}[label={sec:org5212d07}]{Estaciones}
 \begin{itemize}[<+->]
 \item \alert{Solsticio de junio} 
 \begin{itemize}[<.->]
@@ -231,7 +231,7 @@ hemisferio Norte.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org09865c4}]{Hora Solar}
+\begin{frame}[label={sec:orgaba390b}]{Hora Solar}
 \begin{itemize}
 \item \(w\), diferencia entre instante en curso y el mediodía solar (\(w = 0\), \(\psi_s = 0\)).
 \item Criterio de signos: \(w < 0\) antes del mediodía.
@@ -248,13 +248,13 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org913126e}]{Duración del día}
+\begin{frame}[label={sec:orgf2cc6fe}]{Duración del día}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/DuracionDia.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org1c0d232},plain]{Ejes locales}
+\begin{frame}[label={sec:org7fc88cb},plain]{Ejes locales}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -277,7 +277,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{frame}
 
 
-\begin{frame}[label={sec:org9f7fd05}]{Relación entre sistemas de coordenadas}
+\begin{frame}[label={sec:org0652916}]{Relación entre sistemas de coordenadas}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/RelacionSistemasCoordenadas.pdf}
 \end{center}
@@ -287,7 +287,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgcbd3bd1},plain]{Cenit Solar}
+\begin{frame}[label={sec:org190fdc2},plain]{Cenit Solar}
 \[
 \cos(\theta_{zs}) = \cos(\delta) \cos(\omega) \cos(\phi) + \sin(\delta) \sin(\phi)
 \]
@@ -308,7 +308,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgc1bc505},plain]{Azimut solar}
+\begin{frame}[label={sec:org7f6ae4e},plain]{Azimut solar}
 \[
   \cos(\psi_{s}) = \mathrm{sign}(\phi) \cdot \frac{\cos(\delta) \cos(\omega) \sin(\phi) - \cos(\phi) \sin(\delta)} {\sin(\theta_{z})}
 \]
@@ -329,14 +329,14 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org147e75c}]{Trayectoria Solar (\(60\degree N\))}
+\begin{frame}[label={sec:org224c66a}]{Trayectoria Solar (\(60\degree N\))}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TrayectoriaSolar60N.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org893c7a1}]{Trayectoria Solar (\(40\degree S\))}
+\begin{frame}[label={sec:org56f64ee}]{Trayectoria Solar (\(40\degree S\))}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TrayectoriaSolar40S.pdf}
 \end{center}
@@ -344,8 +344,8 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 
 
 \subsection{Hora solar y oficial}
-\label{sec:orgc7b164b}
-\begin{frame}[label={sec:org038bce0}]{Hora solar}
+\label{sec:orga36adad}
+\begin{frame}[label={sec:org7abbc9a}]{Hora solar}
 \[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
 \begin{itemize}
@@ -357,7 +357,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org7849a62}]{Hora oficial}
+\begin{frame}[label={sec:org305302d}]{Hora oficial}
 \begin{itemize}
 \item \alert{La hora oficial} es una medida del tiempo \alert{ligada a un meridiano}
 que sirve de referencia para una zona determinada.
@@ -374,7 +374,7 @@ horario. \emph{\(\Delta\lambda\) es positiva cuando la localidad está situada a
 \end{frame}
 
 
-\begin{frame}[label={sec:org5f1e24a}]{Tiempo solar medio}
+\begin{frame}[label={sec:orgfee470a}]{Tiempo solar medio}
 \begin{itemize}
 \item \alert{La duración del día solar real}, definido como el tiempo que
 transcurre entre dos pasos consecutivos del Sol por el meridiano
@@ -386,7 +386,7 @@ duración del día solar real.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org198d9b0}]{Ecuación del Tiempo}
+\begin{frame}[label={sec:orge7d8e03}]{Ecuación del Tiempo}
 \[
 \mathrm{EoT}=229.18\cdot\left(-0.0334\cdot\sin(M)+0.04184\cdot\sin\left(2\cdot
       M+3.5884\right)\right)
@@ -400,7 +400,7 @@ M=\frac{2\pi}{365.24}\cdot d_{n}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org1c923af}]{Ejemplo de cálculo}
+\begin{frame}[label={sec:orgbca0060}]{Ejemplo de cálculo}
 \[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
 \begin{block}{}
@@ -412,7 +412,7 @@ Calcule la hora solar real correspondiente al día 23 de Abril de 2010
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org549f152}]{Solución}
+\begin{frame}[label={sec:org8ec09a9}]{Solución}
 \[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
 \begin{itemize}[<+->]
@@ -431,7 +431,7 @@ oficial.
 \end{frame}
 
 
-\begin{frame}[label={sec:orgfad81a8}]{}
+\begin{frame}[label={sec:orgfc25557}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/Kahoot_Logo.png}
 \end{center}
@@ -440,36 +440,50 @@ oficial.
 \end{frame}
 
 \section{Radiación Solar en la Superficie Terrestre}
-\label{sec:org76519a3}
+\label{sec:orgd323db8}
 
 \subsection{Radiación Extra-atmosférica}
-\label{sec:orgf0b3851}
+\label{sec:orgdf176ce}
 
-\begin{frame}[label={sec:org614b47c}]{Definición}
+\begin{frame}[label={sec:org925bcca}]{Irradiancia e Irradiación}
+\begin{description}
+\item[{Irradiancia}] es la densidad de \emph{potencia} de radiacion solar incidente en una superficie.
+\begin{itemize}
+\item Unidades: \(\si{\watt\per\meter\squared},\,\si{\kilo\watt\per\meter\squared}\)
+\end{itemize}
+\item[{Irradiación}] es la densidad de \emph{energía} de radiación solar incidente en una superficie.
+\begin{itemize}
+\item Unidades: \(\si{\watthour\per\meter\squared},\,\si{\kilo\watthour\per\meter\squared}\)
+\end{itemize}
+\end{description}
+\end{frame}
+
+\begin{frame}[label={sec:org6767d7c}]{Definición}
 \begin{itemize}
 \item \alert{Radiación extra-atmosférica}: radiación directa del Sol que alcanza la superficie de la atmósfera.
 
 \item \alert{Constante solar} \(B_{0}=\SI{1367}{\watt\per\meter\squared}\) (irradiancia solar sobre la superficie normal al vector solar en el límite superior de la atmósfera terrestre)
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orgd2638db}]{Ecuaciones}
+\begin{frame}[label={sec:orgfc373bf}]{Ecuaciones}
 \begin{itemize}
-\item \alert{Irradiancia extra-atmosférica}
+\item \alert{Irradiancia extra-atmosférica} (\(\si{\watt\per\meter\squared}\))
 
 \[B_{0}(0)=B_{0}\cdot\epsilon_{0}\cdot\cos\theta_{zs}\]
 
-\item \alert{Irradiación extra-atmosférica diaria}  (\(\omega_{s}\) en radianes)
+\item Factor de corrección por excentricidad
+\[\epsilon_0 = 1+0,033\cdot\cos(2\pi d_n/365)\]
+
+\item \alert{Irradiación extra-atmosférica diaria} (\(\si{\watthour\per\meter\squared}\)) 
 \[
   B_{0d}(0)=-\frac{24}{\pi}B_{0}\epsilon_{0}\cdot\left(\omega_{s}\sin\phi\sin\delta+\cos\delta\cos\phi\sin\omega_{s}\right)
 \]
-
-\item Factor de corrección por excentricidad
-\[\epsilon_0 = 1+0,033\cdot\cos(2\pi d_n/365)\]
+($\omega_{s}$ en radianes)
 \end{itemize}
 \end{frame}
 
 
-\begin{frame}[label={sec:org95334a9}]{Días promedio}
+\begin{frame}[label={sec:org1747e18}]{Días promedio}
 \begin{itemize}
 \item Es posible demostrar que el \alert{promedio mensual} de esta irradiación
 diaria \alert{coincide numericamente} con el valor de irradiación diaria
@@ -499,14 +513,14 @@ Mes & Jul & Ago & Sep & Oct & Nov & Dic\\
 \end{frame}
 
 \subsection{Radiación solar en la superficie terrestre}
-\label{sec:org120d373}
-\begin{frame}[label={sec:org7c3d77f}]{}
+\label{sec:org8d3a0b0}
+\begin{frame}[label={sec:orgf1b0930}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_G0.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org0252ff7}]{Interacción de la radiación con la atmósfera}
+\begin{frame}[label={sec:orga5f8dd2}]{Interacción de la radiación con la atmósfera}
 \begin{itemize}
 \item \alert{Disminución} de la radiación incidente en la superficie terrestre
 (reflexión en nubes)
@@ -523,44 +537,7 @@ partículas)
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org1d5a70f}]{Caracterización de la atmósfera}
-\begin{itemize}
-\item \alert{Masa de aire}:
-
-\begin{itemize}
-\item Relación entre camino recorrido por rayos directos del Sol a
-través de la atmósfera hasta la superficie receptora y el que recorrerían en caso de incidencia vertical (AM=1)
-
-\item \(AM \simeq 1/\cos\theta_{zs}\)
-\end{itemize}
-
-\item \alert{Índice de claridad}
-
-\begin{itemize}
-\item Relación entre la radiación en la superficie terrestre y la
-radiación extra-atmosférica, ambas en el plano horizontal
-
-\item El índice de claridad \alert{no depende de las variaciones debidas al
-movimiento aparente del sol}.
-
-\item \(K_{Tm}=\frac{G_{d,m}(0)}{B_{0d,m}(0)}\) (mensual)
-\end{itemize}
-\end{itemize}
-\end{frame}
-
-\begin{frame}[label={sec:org69c6c58}]{Índice de claridad}
-\begin{description}
-\item[{\(K_{T}\):}] índice de claridad instantáneo. \(K_{T}=G/B_{0}\)
-
-\item[{\(K_{Td}\):}] índice de claridad diario. \(K_{Td}=G_{d}/B_{0d}\)
-
-\item[{\(K_{Tm}\):}] índice de claridad mensual. \(K_{Tm}=G_{m}/B_{0m}=G_{d,m}/B_{0d,m}\)
-
-\item[{\(K_{Ta}\):}] índice de claridad anual. \(K_{Ta} = G_{a}/B_{0a} = \dots\)
-\end{description}
-\end{frame}
-
-\begin{frame}[label={sec:org447974d}]{Componentes de la radiación solar}
+\begin{frame}[label={sec:org273f5c3}]{Componentes de la radiación solar}
 \begin{itemize}
 \item \alert{Radiación Directa}. (B)
 
@@ -588,7 +565,7 @@ movimiento aparente del sol}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org3b8eebe}]{Cómo se escribe}
+\begin{frame}[label={sec:org8ff545c}]{Cómo se escribe}
 \begin{block}{Forma, tiempo, lugar}
 \begin{description}
 \item[{Forma+Tiempo+Lugar:}] Irradiancia directa (forma) horaria (tiempo)
@@ -608,7 +585,7 @@ en el plano del generador (lugar)
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org43fc6d0}]{Cómo se escribe}
+\begin{frame}[label={sec:orgf20e6dc}]{Cómo se escribe}
 \begin{block}{Forma, tiempo, lugar}
 \[Forma_{tiempo,promedio}(lugar)\]
 
@@ -621,16 +598,57 @@ en el plano del generador (lugar)
 \[B(\beta)\]
 \end{block}
 \end{frame}
-\subsection{Cálculo de componentes de radiación solar}
-\label{sec:org8f0b233}
+\section{Cálculo de componentes de radiación solar}
+\label{sec:orgefe68c9}
 
-\begin{frame}[label={sec:org1c84fbf}]{}
+\begin{frame}[label={sec:org09511fb}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_componentes.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orge330dd0}]{Estimación de Directa y Difusa}
+\begin{frame}[label={sec:org38db9bf}]{Caracterización de la atmósfera}
+\begin{itemize}
+\item \alert{Masa de aire}:
+
+\begin{itemize}
+\item Relación entre camino recorrido por rayos directos del Sol a
+través de la atmósfera hasta la superficie receptora y el que recorrerían en caso de incidencia vertical (AM=1)
+\end{itemize}
+
+\[
+     AM \simeq 1/\cos\theta_{zs}
+   \]
+
+\item \alert{Índice de claridad}
+
+\begin{itemize}
+\item Relación entre la radiación en la superficie terrestre y la
+radiación extra-atmosférica, ambas en el plano horizontal
+
+\item El índice de claridad \alert{no depende de las variaciones debidas al
+movimiento aparente del sol}.
+\end{itemize}
+
+\[
+     K_{Tm}=\frac{G_{d,m}(0)}{B_{0d,m}(0)}
+   \]
+\end{itemize}
+\end{frame}
+
+\begin{frame}[label={sec:orgcc15c87}]{Índice de claridad}
+\begin{description}
+\item[{\(K_{T}\):}] índice de claridad instantáneo. \(K_{T}=G/B_{0}\)
+
+\item[{\(K_{Td}\):}] índice de claridad diario. \(K_{Td}=G_{d}/B_{0d}\)
+
+\item[{\(K_{Tm}\):}] índice de claridad mensual. \(K_{Tm}=G_{m}/B_{0m}=G_{d,m}/B_{0d,m}\)
+
+\item[{\(K_{Ta}\):}] índice de claridad anual. \(K_{Ta} = G_{a}/B_{0a} = \dots\)
+\end{description}
+\end{frame}
+
+\begin{frame}[label={sec:orgf54e01a}]{Estimación de Directa y Difusa}
 \begin{itemize}
 \item Objetivo: Establecer una \alert{relación entre la fracción difusa} de la radiación horizontal (\(F_{D}=\frac{D(0)}{G(0)}\)) y \alert{el índice de claridad}.
 
@@ -640,15 +658,15 @@ en el plano del generador (lugar)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org1a8e062}]{Correlaciones \(F_{D}\) y \(K_{T}\): Ecuación de Page}
+\begin{frame}[label={sec:orgb13b517},plain]{Medias mensuales: Ecuación de Page}
 \begin{center}
-\includegraphics[width=.9\linewidth]{../figs/FdKtMensual.pdf}
+\includegraphics[height=0.7\textheight]{../figs/FdKtMensual.pdf}
 \end{center}
 
 \[F_{Dm}=1-1.13\cdot K_{Tm}\]
 \end{frame}
 
-\begin{frame}[label={sec:orgf3e80e1}]{Correlaciones \(F_{D}\) y \(K_{T}\)}
+\begin{frame}[label={sec:org89813b3}]{Correlaciones \(F_{D}\) y \(K_{T}\)}
 Ejemplo: en un lugar con \(G_{d,m}(0) = \SI{3150}{\watthour\per\meter\squared}\) en un mes con \(B_{o,dm}(0) = \SI{4320}{\watthour\per\meter\squared}\)  será:
 
 \begin{itemize}
@@ -662,9 +680,9 @@ Ejemplo: en un lugar con \(G_{d,m}(0) = \SI{3150}{\watthour\per\meter\squared}\)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgb8b37ad}]{Correlaciones \(F_{D}\) y \(K_{T}\): Collares-Pereira y Rabl}
+\begin{frame}[label={sec:org65734d7},plain]{Valores Diarios: Collares-Pereira y Rabl}
 \begin{center}
-\includegraphics[width=.9\linewidth]{../figs/FdKtDiario.pdf}
+\includegraphics[height=0.7\textheight]{../figs/FdKtDiario.pdf}
 \end{center}
 {\scriptsize \[
 F_{Dd} = \begin{cases}
@@ -676,7 +694,7 @@ F_{Dd} = \begin{cases}
 {\scriptsize \par}
 \end{frame}
 
-\begin{frame}[label={sec:org214b0bb}]{Ejemplo}
+\begin{frame}[label={sec:org6b1938e}]{Ejemplo}
 \begin{description}
 \item[{Calcular}] las componentes directa y difusa de la radiación solar del:
 
@@ -687,10 +705,10 @@ F_{Dd} = \begin{cases}
 \end{description}
 \end{frame}
 \section{Bases de Datos}
-\label{sec:org604ed67}
+\label{sec:org73d7f7c}
 \subsection{Introducción}
-\label{sec:orgeed3275}
-\begin{frame}[label={sec:orgde887ac}]{Variabilidad Solar}
+\label{sec:org2581b5b}
+\begin{frame}[label={sec:orgf7383dd}]{Variabilidad Solar}
 \begin{itemize}
 \item La \alert{radiación extra-atmosférica} se puede expresar de forma \alert{analítica} en función del día, hora y latitud.
 \item La \alert{radiación en la superficie terrestre} es un \alert{proceso estocástico} (aleatorio) debido a la interacción con la atmósfera.
@@ -700,7 +718,7 @@ F_{Dd} = \begin{cases}
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org3778802}]{Estimaciones a Largo Plazo}
+\begin{frame}[label={sec:org0293ffd}]{Estimaciones a Largo Plazo}
 \begin{itemize}
 \item Nos interesan \alert{estimaciones a largo plazo} del funcionamiento de los sistemas FV en una localización concreta.
 \item Las fuentes de datos de radiación solar deben:
@@ -711,7 +729,7 @@ F_{Dd} = \begin{cases}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgdbeb82b}]{Variabilidad Temporal}
+\begin{frame}[label={sec:org663e080}]{Variabilidad Temporal}
 \begin{center}
 \includegraphics[height=0.45\textheight]{../figs/VariabilidadRadiacionDiario.pdf}
 \end{center}
@@ -723,7 +741,7 @@ F_{Dd} = \begin{cases}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org9c25e60}]{Variabilidad Espacial}
+\begin{frame}[label={sec:org47b9f53}]{Variabilidad Espacial}
 \begin{center}
 \includegraphics[height=0.4\textheight]{../figs/SpatialVariability.jpg}
 \end{center}
@@ -735,7 +753,7 @@ F_{Dd} = \begin{cases}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orga85a229}]{Resumen}
+\begin{frame}[label={sec:orgaa97676}]{Resumen}
 \begin{block}{Requerimientos}
 Una estimación de la productividad de un SFV confiable y representativa en el largo plazo requiere:
 \begin{itemize}
@@ -746,8 +764,8 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 \subsection{Fuentes de Datos}
-\label{sec:org739a0fb}
-\begin{frame}[label={sec:orgae7af11}]{Estaciones Meteorológicas}
+\label{sec:org6522a66}
+\begin{frame}[label={sec:org43257b9}]{Estaciones Meteorológicas}
 \begin{itemize}
 \item Series temporales largas
 \item Alta resolución temporal (\(\SI{1}{\min}\))
@@ -765,7 +783,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 
-\begin{frame}[label={sec:orge0acabd}]{Imágenes de Satelite}
+\begin{frame}[label={sec:org555548e}]{Imágenes de Satelite}
 \begin{itemize}
 \item Baja resolución temporal (\(\SI{1}{hora}\)).
 
@@ -778,7 +796,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 
-\begin{frame}[label={sec:org1813d32}]{Métodos Híbridos}
+\begin{frame}[label={sec:orgf509293}]{Métodos Híbridos}
 \begin{itemize}
 \item Las medidas terrestres se mezclan con las estimaciones de satélite para mejorar la resolución espacial.
 \item Interpolación Espacial.
@@ -797,7 +815,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org5742984}]{Fuentes de Datos}
+\begin{frame}[label={sec:orge3685de}]{Fuentes de Datos}
 \url{https://github.com/oscarperpinan/mds/wiki}
 
 \begin{itemize}
@@ -818,8 +836,8 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 \subsection{Control de Calidad}
-\label{sec:orgf479a2b}
-\begin{frame}[label={sec:orge6ae752}]{Introducción}
+\label{sec:org83e75c0}
+\begin{frame}[label={sec:org7d52fb6}]{Introducción}
 \begin{itemize}
 \item Es necesario filtrar y corregir las medidas para eliminar datos erróneos y valores extremos.
 \begin{itemize}
@@ -830,7 +848,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org4374f0f}]{Límites Físicos}
+\begin{frame}[label={sec:org6336b92}]{Límites Físicos}
 \begin{itemize}
 \item El índice de claridad no puede ser mayor que 1 (la irradiación global diaria no puede superar la extra-atmosférica).
 \end{itemize}
@@ -850,14 +868,14 @@ K_t = \frac{G_d(0)}{B_{0d}(0)} \geq 0.03
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org1f672ca}]{Coherencia Espacial}
+\begin{frame}[label={sec:org6167319}]{Coherencia Espacial}
 \begin{itemize}
 \item Las medidas de una estación se deben comparar con \alert{estaciones cercanas} (por ejemplo, mediante interpolación espacial).
 \item La comparación se debe realizar con \alert{valores agregados} (medias diarias o mensuales).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org547b97d}]{Análisis Estadístico de las Desviaciones}
+\begin{frame}[label={sec:org6801887}]{Análisis Estadístico de las Desviaciones}
 \begin{itemize}
 \item Desviaciones, \(\mathbf{D}\), entre observaciones, \(\mathbf{O}\), y un modelo, \(\mathbf{M}\) (u otro conjunto de observaciones):
 \end{itemize}
@@ -875,7 +893,7 @@ K_t = \frac{G_d(0)}{B_{0d}(0)} \geq 0.03
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org2f1dbc7}]{Exactitud y Precisión}
+\begin{frame}[label={sec:org0eb4aa6}]{Exactitud y Precisión}
 \begin{center}
 \includegraphics[height=0.8\textheight]{/home/oscar/github/esf/figs/bias-variance.png}
 \end{center}
@@ -883,7 +901,7 @@ K_t = \frac{G_d(0)}{B_{0d}(0)} \geq 0.03
 \url{http://scott.fortmann-roe.com/docs/BiasVariance.html}
 \end{frame}
 
-\begin{frame}[label={sec:orgcbb1f9b}]{Métricas}
+\begin{frame}[label={sec:org1b07f58}]{Métricas}
 \begin{itemize}
 \item \alert{Mean Bias Difference (MBD)}, diferencia media (indica si el modelo sobreestima o subestima):
 \end{itemize}
@@ -906,7 +924,7 @@ RMSD = \left(\frac{1}{n} \sum_{i=1}^n d_i^2 \right)^{1/2} =  \left( \frac{1}{n} 
 MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \left|m_i - o_i\right|
 \]
 \end{frame}
-\begin{frame}[label={sec:org4a304f6}]{}
+\begin{frame}[label={sec:orgbf374d7}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/Kahoot_Logo.png}
 \end{center}
@@ -915,12 +933,12 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{frame}
 
 \section{Radiación Solar en Generadores FV}
-\label{sec:org8f86fb1}
+\label{sec:orga90cd8b}
 
 \subsection{Introducción}
-\label{sec:org5fd4e27}
+\label{sec:orge5253c7}
 
-\begin{frame}[label={sec:orgffd86f3}]{Ángulo de Inclinación}
+\begin{frame}[label={sec:orga172887}]{Ángulo de Inclinación}
 \begin{itemize}
 \item Los generadores FV tienen un ángulo de inclinación positivo para maximizar el rendimiento.
 \item Este ángulo depende de la latitud del lugar y de la aplicación del sistema.
@@ -931,7 +949,7 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgaab779b}]{Definiciones}
+\begin{frame}[label={sec:orga9e3ce7}]{Definiciones}
 \begin{itemize}
 \item \(\theta_s\), \alert{ángulo de incidencia (AOI)}, ángulo entre los rayos solares y la perpendicular al plano del generador.
 \item \(\alpha\): \alert{orientación del generador} (0º cuando está orientado al mediodía solar)
@@ -939,14 +957,14 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{itemize}
 \end{frame}
 \subsection{Tipos de Sistemas}
-\label{sec:orgb91fe35}
-\begin{frame}[label={sec:org3d607de}]{Sistema Estático}
+\label{sec:org6fee64e}
+\begin{frame}[label={sec:orgc6b4b95}]{Sistema Estático}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/EstructuraEstaticaSuelo.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org4e2fb56}]{Sistemas con seguimiento}
+\begin{frame}[label={sec:org2b48f43}]{Sistemas con seguimiento}
 \begin{itemize}[<+->]
 \item \alert{Fundamento:}
 \begin{itemize}[<.->]
@@ -965,7 +983,7 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org14e3423}]{Algunos tipos de seguimiento solar}
+\begin{frame}[label={sec:orgf03f0fa}]{Algunos tipos de seguimiento solar}
 \begin{itemize}[<+->]
 \item \alert{Doble eje}
 \begin{itemize}[<.->]
@@ -993,13 +1011,13 @@ necesarios),
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgffcb1e4}]{Sistema de Seguimiento(1 eje, horizontal N-S)}
+\begin{frame}[label={sec:orgeb36225}]{Sistema de Seguimiento(1 eje, horizontal N-S)}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SeguidorEjeHorizontal.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org11bc655}]{Sistema de Seguimiento (2x ejes)}
+\begin{frame}[label={sec:org67055c9}]{Sistema de Seguimiento (2x ejes)}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/SeguidorReocin.jpg}
 \end{center}
@@ -1007,14 +1025,14 @@ necesarios),
 
 
 \subsection{Irradiancia a partir de irradiación diaria}
-\label{sec:org7f4b519}
-\begin{frame}[label={sec:org35ecf30}]{}
+\label{sec:org3b8f291}
+\begin{frame}[label={sec:org46179c6}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_perfil.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org8afa20e}]{Planteamiento}
+\begin{frame}[label={sec:orgc460060}]{Planteamiento}
 \begin{itemize}
 \item \alert{Objetivo}: construir un perfil diario promedio de irradiancia global e irradiancia difusa (\emph{cielo claro})
 \item \alert{Puntos clave}:
@@ -1029,13 +1047,13 @@ necesarios),
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org240abce}]{Perfil}
+\begin{frame}[label={sec:org64b7e1e}]{Perfil}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/RgRd.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org0caa099}]{Ecuaciones del perfil}
+\begin{frame}[label={sec:orgf862f58}]{Ecuaciones del perfil}
 \[r_{D}=\frac{D(0)}{D_{d}(0)}=\frac{B_{o}(0)}{B_{0d}(0)}\]
 
 \[r_{G}=\frac{G(0)}{G_{d}(0)}=r_{D}\cdot\left(a+b\cdot\cos(\omega)\right)\]
@@ -1046,28 +1064,28 @@ necesarios),
 \end{frame}
 
 \subsection{Transformación al plano del generador}
-\label{sec:org6fe3723}
+\label{sec:org0f3cf0b}
 
-\begin{frame}[label={sec:org2c1c0b3}]{}
+\begin{frame}[label={sec:org7862c82}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_inclinada.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org0c033d2}]{Planteamiento}
+\begin{frame}[label={sec:orgaad3d68}]{Planteamiento}
 \begin{itemize}
 \item \alert{Irradiancia Directa}: ecuación analítica basada en geometría solar (ángulo cenital) y del generador (ángulo de incidencia).
 \item \alert{Irradiancia Difusa}: modelos del estado de cielo, modelo isotrópico o anisotrópico.
 \item \alert{Irradiancia de Albedo}: modelo isotrópico con coeficiente de reflexión típico.
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orgaf97bf2}]{Irradiancia Directa}
+\begin{frame}[label={sec:org7a61491}]{Irradiancia Directa}
 \alert{Irradiancia Directa}: ecuación analítica basada en geometría solar (ángulo cenital) y del generador (ángulo de incidencia).
 
 \[B(\beta,\alpha)=B(0)\cdot\frac{\max(0,\cos(\theta_{s}))}{\cos(\theta_{zs})}\]
 \end{frame}
 
-\begin{frame}[label={sec:orgdfe3f2e}]{Irradiancia Difusa}
+\begin{frame}[label={sec:org2b228e2}]{Irradiancia Difusa}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AnguloVisionCielo.pdf}
 \end{center}
@@ -1075,7 +1093,7 @@ necesarios),
 \[D(\beta,\alpha)=\intop_{\Omega}L(\theta_{z},\psi)\cdot\cos(\theta_{z}^{'})d\Omega\]
 \end{frame}
 
-\begin{frame}[label={sec:org09de5d3}]{Irradiancia Difusa Isotrópica}
+\begin{frame}[label={sec:org9b613f5}]{Irradiancia Difusa Isotrópica}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AnguloVisionCielo.pdf}
 \end{center}
@@ -1085,7 +1103,7 @@ necesarios),
 
 \[D(\beta,\alpha)=D(0)\cdot\frac{1+\cos(\beta)}{2}\]
 \end{frame}
-\begin{frame}[label={sec:orgc719659}]{Irradiancia Difusa Anisotrópica}
+\begin{frame}[label={sec:org1b5c98f}]{Irradiancia Difusa Anisotrópica}
 \[D(\beta,\alpha) = D^{I}(\beta,\alpha)+D^{C}(\beta,\alpha)\]
 
 \[D^{I}(\beta,\alpha) = D(0) \cdot (1-k_{1}) \cdot \frac{1 + \cos(\beta)}{2}\]
@@ -1095,7 +1113,7 @@ necesarios),
 \[k_{1} = \frac{B(0)}{B_{0}(0)}\]
 \end{frame}
 
-\begin{frame}[label={sec:orgb2619e4}]{Irradiancia de Albedo}
+\begin{frame}[label={sec:org719edd7}]{Irradiancia de Albedo}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AnguloVisionCielo.pdf}
 \end{center}
@@ -1107,8 +1125,8 @@ necesarios),
 \end{frame}
 
 \subsection{Geometría de los sistemas fotovoltaicos}
-\label{sec:org67790b9}
-\begin{frame}[label={sec:org807074e},plain]{Ángulo de Incidencia Sistema Estático}
+\label{sec:org3978d5a}
+\begin{frame}[label={sec:org27c9bd3},plain]{Ángulo de Incidencia Sistema Estático}
 \begin{itemize}
 \item Si \(\alpha=0\)
 \end{itemize}
@@ -1125,7 +1143,7 @@ necesarios),
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org4e29a21}]{Sistema Estático: Ángulo de Incidencia}
+\begin{frame}[label={sec:orgee67960}]{Sistema Estático: Ángulo de Incidencia}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1136,7 +1154,7 @@ necesarios),
 
 
 
-\begin{frame}[label={sec:org74d4984},plain]{Ángulo de Incidencia Seguidor 1x NS}
+\begin{frame}[label={sec:org1e14785},plain]{Ángulo de Incidencia Seguidor 1x NS}
 \[\cos(\theta_{s})=\cos(\delta)\sqrt{\sin^{2}(\omega)+\left(\cos(\omega)\cos(\phi)+\tan(\delta)\sin(\phi)\right)^{2}}\]
 
 \begin{center}
@@ -1144,7 +1162,7 @@ necesarios),
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org62d23be}]{Ángulo de Inclinación Seguidor 1x NS}
+\begin{frame}[label={sec:orgc014d49}]{Ángulo de Inclinación Seguidor 1x NS}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1155,7 +1173,7 @@ necesarios),
 
 
 
-\begin{frame}[label={sec:org92adec5}]{Ángulo de Incidencia Seguidor 1x NS}
+\begin{frame}[label={sec:org2c0a649}]{Ángulo de Incidencia Seguidor 1x NS}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1167,7 +1185,7 @@ necesarios),
 
 
 
-\begin{frame}[label={sec:org28a8905},plain]{Ángulo de Incidencia Seguidor 2x}
+\begin{frame}[label={sec:orgb45251d},plain]{Ángulo de Incidencia Seguidor 2x}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Sombra2X.pdf}
 \end{center}
@@ -1179,7 +1197,7 @@ necesarios),
   \cos(\theta_{s}) &= 1
 \end{align*}
 \end{frame}
-\begin{frame}[label={sec:org65f7e96}]{Inclinación Seguidor 2x}
+\begin{frame}[label={sec:org2223445}]{Inclinación Seguidor 2x}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1190,38 +1208,38 @@ necesarios),
 
 
 \subsection{Pérdidas angulares y por suciedad}
-\label{sec:orgc5361c4}
+\label{sec:orge4c2c13}
 
-\begin{frame}[label={sec:org7564eee}]{}
+\begin{frame}[label={sec:org54ed50e}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_efectiva.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgb8dd75c}]{Radiación directa}
+\begin{frame}[label={sec:org9573c45}]{Radiación directa}
 \[B_{ef}(\beta,\alpha)=B(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot (1-FT_{B}(\theta_{s}))\]
 \begin{center}
 \includegraphics[height=0.7\textheight]{../figs/Suciedad.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org69b009d}]{Difusa y Albedo}
+\begin{frame}[label={sec:org35368a3}]{Difusa y Albedo}
 \begin{align*}
 D_{ef}^{iso}(\beta,\alpha) &= D^{iso}(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot(1-FT_{D}(\beta))\\
 D_{ef}^{cir}(\beta,\alpha) &= D^{cir}(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot(1-FT_{B}(\theta_{s}))\\
 R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot(1-FT_{R}(\beta))
 \end{align*}
 \end{frame}
-\begin{frame}[label={sec:org747f792}]{Pérdidas anuales}
+\begin{frame}[label={sec:org678fe5b}]{Pérdidas anuales}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/GefVSG.pdf}
 \end{center}
 \end{frame}
 
 \subsection{Radiación Efectiva según tipologías}
-\label{sec:org9af27ea}
+\label{sec:org63d21a7}
 
-\begin{frame}[label={sec:orgae3f12f}]{Radiación en Sistema estático}
+\begin{frame}[label={sec:org2ff04c8}]{Radiación en Sistema estático}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/FixedKrig.pdf}
 \end{center}
@@ -1229,7 +1247,7 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:org4725b65}]{Radiación en Seguimiento Eje Horizontal}
+\begin{frame}[label={sec:org0e0e5b9}]{Radiación en Seguimiento Eje Horizontal}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/HorizKrig.pdf}
 \end{center}
@@ -1237,14 +1255,14 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:org3ffe020}]{Radiación en Seguimiento Doble Eje}
+\begin{frame}[label={sec:orgf989fc9}]{Radiación en Seguimiento Doble Eje}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TwoKrig.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgc139f2d}]{Comparación Doble Eje-Estática}
+\begin{frame}[label={sec:org97cce8d}]{Comparación Doble Eje-Estática}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TwoFixed.pdf}
 \end{center}
@@ -1252,7 +1270,7 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:orgd206da0}]{Comparación Doble Eje - Horizontal}
+\begin{frame}[label={sec:orga96363b}]{Comparación Doble Eje - Horizontal}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TwoHoriz.pdf}
 \end{center}
@@ -1260,7 +1278,7 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:org670dade}]{Comparación Eje Horizontal - Estática}
+\begin{frame}[label={sec:org7ccf2cb}]{Comparación Eje Horizontal - Estática}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/HorizFixed.pdf}
 \end{center}
@@ -1268,20 +1286,20 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:org74ca069}]{Comparación entre Sistemas}
+\begin{frame}[label={sec:org76f5f24}]{Comparación entre Sistemas}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/compSystems.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org2ae0c2f}]{Comparación entre Sistemas}
+\begin{frame}[label={sec:org9531184}]{Comparación entre Sistemas}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/compSystemsG0.png}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgbc54dfa}]{}
+\begin{frame}[label={sec:org971acef}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/Kahoot_Logo.png}
 \end{center}
